2016-07-31	Tweaks.  (5)

		lolwutconf/ :
		- bumped to 01f15b32fc

2016-07-30	Tweaks.  (4)

		bin/innocent-pear-c++.cc :
		- now always passes `-fno-integrated-as' to target C++
		  compiler, if supported
		- now ignores any `-fintegrated-as' on input command line

		GNUmakefile :
		- now says in $(config.h.host) whether target compiler has
		  `-fno-integrated-as'
		- no longer specially passes `-fno-integrated-as' to make
		  rule when building .s files for target

2016-07-29	Improved relocation handling.

		bin/innocent-pear-doge.cc :
		- no longer errors out if input has no dynamic relocations

2016-07-28	Tweaks.  (3)

		configure ,
		GNUmakefile ,
		include/innocent-pear/dawg.h ,
		include/innocent-pear/kthxbai.h :
		- target-side C++ variadic template support is now also
		  mandatory

		lolwutconf/ :
		- bumped to 01f15b32fc

2016-07-26	Tweaks.  (2)

		configure ,
		GNUmakefile :
		- host-side C++ variadic template support is now mandatory;
		  so bin/innocent-pear-doge can always be built

		lolwutconf/ :
		- bumped to 3e5b959d52

2016-07-24	"No output has been received in the last 10m0s, this
		potentially indicates a stalled build or something wrong
		with the build itself."

		share/innocent-pear/doge-1.cc :
		- now calls rofl<...>::tcflow(, TCOOFF) on a (compile-time)
		  random fd, not always stdout

		share/innocent-pear/doge-3.cc :
		- bug fix: now calls rofl<...>::tcflow(, TCOON) on stdin and
		  stderr as well

		include/innocent-pear/rofl.h :
		- rofl<...>::ioctl(fd, ...) now also scrambles fd if known to
		  be constant
		- rofl<...>::tcflow(fd, .) no longer scrambles fd if handing
		  over to ioctl(...) :-)

2016-07-23	Beginning of clang++ support.

		configure :
		- now tests if host and target compilers support
		  `-fno-integrated-as', and if target supports `-wrapper'
		- libbfd is now obligatory

		bin/innocent-pear-c++.cc :
		- .ccc -> .cc
		- now supports sending compiler passes to calm.cc via using
		  `-###' rather than `-wrapper'